force-app/main/default/objects/Category__c/Category__c.object-meta.xml
<CustomObject>
    <description>This field is used to store the product category.</description>
    <label>Category</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>