force-app/main/default/objects/Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This fields lookup the same object&apos;s parent record.</description>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Category</relationshipLabel>
    <relationshipName>Category</relationshipName>
    <type>Lookup</type>
</CustomField>