force-app/main/default/objects/Category__c/fields/Category_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Category_Hierarchy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field stores the lookup value with category hierarchy.</description>
    <label>Category Hierarchy</label>
    <referenceTo>Category_Hierarchy__c</referenceTo>
    <relationshipLabel>Category</relationshipLabel>
    <relationshipName>Category</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>