force-app/main/default/objects/Category__c/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <description>This field is used to store the product category type.</description>
    <label>Category Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>