force-app/main/default/objects/Category__c/fields/Service_Org__c.field-meta.xml
<CustomField>
    <fullName>Service_Org__c</fullName>
    <label>Service Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IA-SS</fullName>
            </value>
            <value>
                <fullName>IA-PS</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>LI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>