force-app/main/default/objects/Category__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>This field stores the category start date.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>