force-app/main/default/objects/Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Category_Type__c</columns>
    <columns>Language_Code__c</columns>
    <columns>Service_Org__c</columns>
    <columns>Category_Hierarchy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>